# YuGiOhAccess

./: README.md  pyproject.toml
.github/workflows/: continuous-deployment.yaml
specs/: YuGiOhAccess.mac.spec  YuGiOhAccess.win.spec  common.py  hook-accessible_output3.py
src/: YuGiOhAccess.py
src/core/: config.py  discord_presence.py  dotdict.py  exceptions.py  utils.py  variables.py
src/data/decks/: Black Wings.ydke  Blue Eyes White Dragon.ydke  Cyber Angel.ydke  Cyber Dragon.ydke  Dark Magician.ydke  Elemental Hero.ydke  Red Dragon Arch Fiend.ydke  Red Eyes Black Dragon.ydke  Stardust Dragon.ydke
src/game/: client.py  language_handler.py  player.py  room.py  serverinfo.py  servers.py
src/game/card/: card.py  card_constants.py  location_conversion.py  ydke.py
src/game/edo/: banlists.py  default_values.py  game_socket.py  structs.py  structs_utils.py
src/ui/: __init__.py  action_menu.py  app.py  audio.py  base_ui.py  card_list_ui.py  data_updater_ui.py  duel_field.py  duel_menu.py  duel_state_change_ui.py  fatal_exception_ui.py  frame.py  main_ui.py  output.py  output2.py  rematch_ui.py  rock_paper_scissors_ui.py  room_ui.py  server_ui.py  tab_order.py
src/ui/duel_messages/: __init__.py  announce_card.py  announce_number.py  attack.py  attack_disabled.py  become_target.py  card_hint.py  card_selected.py  card_targetting.py  chained.py  chaining.py  confirm_cards.py  counters.py  draw.py  (+42 more)
tests/: test_banlist.py  test_client.py  test_location_conversion.py  test_room.py  test_server.py  test_ydke.py
tests/data/: deck.json  rooms.json  server_rooms.json
(+6 files in other folders)
